--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "yarn dev",
     "dev": "vite dev",
     "build": "vite build",
+    "deploy": "touch build/.nojekyll && yarn gh-pages -d build -t true",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -21,6 +22,7 @@
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
+    "gh-pages": "^5.0.0",
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.8.1",
     "svelte": "^3.54.0",
